# kester-task

./: README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/raffle/: Cargo.toml
anchor/programs/raffle/src/: lib.rs
anchor/programs/raffle/src/constants/: mod.rs
anchor/programs/raffle/src/errors/: mod.rs
anchor/programs/raffle/src/instructions/: claim_nft.rs  close_raffle.rs  enter_raffle.rs  initialize.rs  initialize_raffle.rs  mod.rs  pick_winner.rs
anchor/programs/raffle/src/states/: mod.rs  program_state.rs  raffle.rs
anchor/scripts/: init.ts
anchor/src/: basic-exports.ts
anchor/tests/: raffle.spec.ts
src/app/: SolanaWalletProvider.tsx  layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/create/: page.tsx
src/app/raffle/[cid]/: page.tsx
src/components/: CloseModal.tsx  EntriesList.tsx  Header.tsx  RaffleCard.tsx  RaffleDetails.tsx  RaffleEnter.tsx  RaffleHero.tsx
src/data/: index.ts
src/services/: raffle.tsx
src/utils/: helper.ts  interfaces.ts
